include USER as wind input source option
